--- a/peermountain_sdk/src/main/res/layout/pm_activity_home.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_activity_home.xml
@@ -48,6 +48,7 @@
         android:id="@+id/pmIvLogout"
         android:layout_width="30dp"
         android:layout_height="30dp"
+        android:padding="5dp"
         android:layout_gravity="bottom|right"
         android:layout_margin="@dimen/pm_margin_big"
         android:src="@drawable/pm_ic_logout"
