--- a/peermountain_sdk/src/main/res/layout/pm_fragment_register_select_keywords.xml
+++ b/peermountain_sdk/src/main/res/layout/pm_fragment_register_select_keywords.xml
@@ -37,16 +37,22 @@
         android:layout_weight="1"
         android:padding="@dimen/pm_margin_normal">
 
-        <android.support.v7.widget.GridLayout
-            android:id="@+id/gridKeywords"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:alignmentMode="alignBounds"
-            app:columnCount="4"
-            app:columnOrderPreserved="true"
-            app:orientation="horizontal"
-            />
+            android:layout_height="match_parent"
+            android:fillViewport="false">
+
+            <android.support.v7.widget.GridLayout
+                android:id="@+id/gridKeywords"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:alignmentMode="alignBounds"
+                app:columnCount="4"
+                app:columnOrderPreserved="true"
+                app:orientation="horizontal"
+                />
+        </ScrollView>
 
         <ImageView
             android:id="@+id/ivCheck"
@@ -58,8 +64,8 @@
         android:id="@+id/tvSkip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/pm_margin_normal"
         android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="@dimen/pm_margin_normal"
         android:gravity="center"
         android:orientation="vertical"
         android:visibility="gone"
